--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  gameInstance.progress.full.style.width = (100 * progress) + "%";
 		  gameInstance.progress.empty.style.width = (100 * (1 - progress)) + "%";
 		  if (progress == 1){
-			gameInstance.logo.style.display = gameInstance.progress.style.display = "none";
+			//gameInstance.logo.style.display = gameInstance.progress.style.display = "none";
 			gameInstance.SendMessage("Managers","ctrl", myVar);
 			}
 		}
@@ -54,16 +54,16 @@
     </div>
 	<div id = "main">
 	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(0)">Quest 1</a></p>
-	   <p><a onclick="fl(1)">Quest 2</a></p>
-	   <p><a onclick="fl(2)">https://ayadmawla.github.io/HSR/quest3</a></p>
-	   <p><input type="button" value="Quest 4" onclick="fl(3)"></p>
-	   <p><input type="button" value="Quest 5" onclick="fl(4)"></p>
-	   <p><input type="button" value="Quest 6" onclick="fl(5)"></p>
-	   <p><input type="button" value="Quest 7" onclick="fl(6)"></p>
-	   <p><input type="button" value="Quest 8" onclick="fl(7)"></p>
-	   <p><input type="button" value="Quest 9" onclick="fl(8)"></p>
-	   <p><input type="button" value="Quest 10" onclick="fl(9)"></p>
-	   <p><input type="button" value="Quest 11" onclick="fl(10)"></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(1)">Quest 2</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(3)">Quest 3</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(3)">Quest 4</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(4)">Quest 5</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(5)">Quest 6</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(6)">Quest 7</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(7)">Quest 8</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(8)">Quest 9</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(9)">https://ayadmawla.github.io/HSR/Quest10</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(10)">https://ayadmawla.github.io/HSR/Quest11</a></p>
 	   <p><input type="button" value="Quest 12" onclick="fl(11)"></p>
 	  </div>
   </body>
