--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		  if (!gameInstance.Module)
 			return;
 		  if (!gameInstance.logo) {
-			gameInstance.logo = document.createElement("div");
-			gameInstance.logo.className = "logo " + gameInstance.Module.splashScreenStyle;
-			gameInstance.container.appendChild(gameInstance.logo);
+			//gameInstance.logo = document.createElement("div");
+			//gameInstance.logo.className = "logo " + gameInstance.Module.splashScreenStyle;
+			//gameInstance.container.appendChild(gameInstance.logo);
 		  }
 		  if (!gameInstance.progress) {    
 			gameInstance.progress = document.createElement("div");
