--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  gameInstance.progress.full.style.width = (100 * progress) + "%";
 		  gameInstance.progress.empty.style.width = (100 * (1 - progress)) + "%";
 		  if (progress == 1){
-			//gameInstance.logo.style.display = gameInstance.progress.style.display = "none";
+			gameInstance.logo.style.display = gameInstance.progress.style.display = "none";
 			gameInstance.SendMessage("Managers","ctrl", myVar);
 			}
 		}
@@ -47,9 +47,8 @@
     <div class="webgl-content">
       <div id="gameContainer" style="width: 1280px; height: 720px"></div>
       <div class="footer">
-        <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">SafeWork</div>
+        <div class="title">HSR</div>
       </div>
     </div>
 	<div id = "main">
