--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  gameInstance.progress.full.style.width = (100 * progress) + "%";
 		  gameInstance.progress.empty.style.width = (100 * (1 - progress)) + "%";
 		  if (progress == 1){
-			gameInstance.logo.style.display = gameInstance.progress.style.display = "none";
+			gameInstance.progress.style.display = "none";
 			gameInstance.SendMessage("Managers","ctrl", myVar);
 			}
 		}
