--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
       </div>
     </div>
 	<div id = "main">
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(0)">Quest 1</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(1)">Quest 2</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(0)">Full Quests</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(1)">Quest 1</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(2)">Quest 2</a></p>
 	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(3)">Quest 3</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(3)">Quest 4</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(4)">Quest 5</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(5)">Quest 6</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(6)">Quest 7</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(7)">Quest 8</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(8)">Quest 9</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(9)">https://ayadmawla.github.io/HSR/Quest10</a></p>
-	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(10)">https://ayadmawla.github.io/HSR/Quest11</a></p>
-	   <p><input type="button" value="Quest 12" onclick="fl(11)"></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(4)">Quest 4</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(5)">Quest 5</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(6)">Quest 6</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(7)">Quest 7</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(8)">Quest 8</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(9)">Quest 9</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(10)">https://ayadmawla.github.io/HSR/Quest10</a></p>
+	   <p><a href="https://ayadmawla.github.io/HSR/" onclick="fl(11)">https://ayadmawla.github.io/HSR/Quest11</a></p>
+	   <p><input type="button" value="Quest 12" onclick="fl(12)"></p>
 	  </div>
   </body>
 </html>
