--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		  if (!gameInstance.Module)
 			return;
 		  if (!gameInstance.logo) {
-			//gameInstance.logo = document.createElement("div");
-			//gameInstance.logo.className = "logo " + gameInstance.Module.splashScreenStyle;
-			//gameInstance.container.appendChild(gameInstance.logo);
+			gameInstance.logo = document.createElement("div");
+			gameInstance.logo.className = "logo " + gameInstance.Module.splashScreenStyle;
+			gameInstance.container.appendChild(gameInstance.logo);
 		  }
 		  if (!gameInstance.progress) {    
 			gameInstance.progress = document.createElement("div");
@@ -33,7 +33,7 @@
 		  gameInstance.progress.full.style.width = (100 * progress) + "%";
 		  gameInstance.progress.empty.style.width = (100 * (1 - progress)) + "%";
 		  if (progress == 1){
-			gameInstance.progress.style.display = "none";
+			gameInstance.logo.style.display = gameInstance.progress.style.display = "none";
 			gameInstance.SendMessage("Managers","ctrl", myVar);
 			}
 		}
